--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,9 @@
         margin-left: -15px;
     }
 }
+@media (max-width: 500px) {
+    .App__main-part {
+        flex-direction: column;
+        align-items: center;
+    }
+}
