--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -29,3 +29,19 @@
 .item:hover {
     border: 3px solid #17B890;
 }
+@media (max-width: 500px) {
+    .main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .list {
+        margin-left: 35px;
+    }
+}
+@media (max-width: 350px) {
+    
+    .list {
+        margin-left: 10px;
+    }
+}
