--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -8,7 +8,7 @@
     font-size: 36px;
     font-style: normal;
     font-weight: 600;
-    line-height: normal;
+    line-height: 50px;
 }
 .list {
     margin-left: -37px;
