about title and fix some bugs

--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -49,3 +49,8 @@
         margin-left: 10px;
     }
 }
+.notFoundText {
+    margin: 150px 0px 0px 190px;
+    font-size: 60px;
+    color: aqua;
+}
